Agrego verificacion sintaxis