@@ -5,13 +5,12 @@ import edu.austral.ingsis.clifford.commands.Command;
 import edu.austral.ingsis.clifford.commands.TouchCommand;
 
 public class TouchCommandCreator implements CommandCreator {
-    @Override
-    public Command create(CommandParser.ParseCommand command) throws IllegalArgumentException {
-        if (command.args().size() == 1) {
-            return new TouchCommand(command.args().getFirst());
-        }
-        else{
-            throw new IllegalArgumentException("No name provided");
-        }
+  @Override
+  public Command create(CommandParser.ParseCommand command) throws IllegalArgumentException {
+    if (command.args().size() == 1) {
+      return new TouchCommand(command.args().get(0));
+    } else {
+      throw new IllegalArgumentException("No name provided");
     }
+  }
 }
